--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-  .first {
+  #first {
     height:100vh;
     min-height:400px;
     background-size:cover;
     background-image:url('https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb');
+  }
+  #first h1{  
+    position: absolute;
+    top: 15%;
+    left: 40%;
+    transform: translate;
   }
   .affix {
     -webkit-transition:padding 0.2s ease-out;
